[package]
name = "freecut"
version = "0.1.12"
authors = ["Gerhard Schwanzer <geri@sdf.org>"]
edition = "2018"
license = "Apache-2.0"
description = "A cut optimizer gui for cutting rectangular pieces from panels"
repository = "https://github.com/geri1701/freecut"
keywords = ["gui", "cuts", "optimize", "optimization", "bin-packer"]

[dependencies]
cut-optimizer-2d = "0.4"
fltk = "1.5"
pdf-canvas = "0.7"
rand = "0.8"
rmp-serde = "1.3"
serde = { version="1.0", features = ["derive"] }
uom = "0.36"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
