[package]
name = "freecut"
version = "0.1.12"
authors = ["Gerhard Schwanzer <geri@sdf.org>"]
edition = "2018"
license = "Apache-2.0"
description = "A cut optimizer gui for cutting rectangular pieces from panels"
repository = "https://github.com/geri1701/freecut"
keywords = ["gui", "cuts", "optimize", "optimization", "bin-packer"]

[dependencies]
csv = { version = "1.4" }
cut-optimizer-2d = { version = "0.4" }
fltk = { version = "1.5" }
pdf-canvas = { version = "0.7" }
rand = { version = "0.10" }
rmp-serde = { version = "1.3" }
serde = { version="1.0", features = ["derive"] }
uom = { version = "0.38" }

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
