[package]
name = "freecut"
version = "2.0.0"
edition = "2021"
authors = ["Gerhard Schwanzer <geri@sdf.org>", "Mika"]
license = "Apache-2.0"
description = "Free and open source cut optimizer for editable rectangular panel layouts"
repository = "https://github.com/geri1701/freecut"
publish = false

[dependencies]
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
